crates/formatter/tests/snapshots/snapshots__synapse__main__delta__71__01rebuild_event_edges.sqlite.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2022 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- We're going to stop populating event_edges.room_id and event_edges.is_state,
-- which means we now need to give them defaults.
--
-- We also take the opportunity to:
--   - drop any rows with is_state=True (these were populated a long time ago, but
--     are no longer used.)
--   - drop any rows which do not correspond to entries in `events`
--   - tighten the unique index so that it applies just to (event_id, prev_event_id)
--   - drop the "ev_edges_id" index, which is redundant to the above.
--   - add a foreign key constraint from event_id to `events`

create table new_event_edges (
	event_id text not null,
	prev_event_id text not null,
	room_id text null,
	is_state bool not null default 0,
	foreign key (event_id) references events (event_id)
);

insert into new_event_edges
select ee.event_id, ee.prev_event_id, ee.room_id, ee.is_state
from event_edges ee join events ev using (event_id)
where not ee.is_state;

drop table event_edges;

alter table new_event_edges rename to event_edges;

create unique index event_edges_event_id_prev_event_id_idx
	on event_edges (event_id, prev_event_id);

create index ev_edges_prev_id on event_edges (prev_event_id);
